Attempting to escape characters in the velocity template to leave alone

--- a/project/project/README.md_.vm_.vm
+++ b/project/project/README.md_.vm_.vm
@@ -1,8 +1,8 @@
-# A ${name} Atomist Project Template
+# A \${name} Atomist Project Template
 
-${description}
+\${description}
 
 History
 -------
 
-Originally created by Atomist on ${creation_date}.
+Originally created by Atomist on \${creation_date}.
